# backend/api-doc.yml
@@ -211,6 +211,41 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
+  /reviews:
+    get:
+      tags:
+        - Reviews
+      description: Queries for reviews
+      operationId: queryReviews
+      parameters:
+        - in: query
+          name: city
+          required: true
+          schema:
+            type: string
+        - in: query
+          name: term
+          required: true
+          schema:
+            type: string
+        - in: query
+          name: limit
+          required: false
+          schema:
+            type: string
+      responses:
+        '200' :
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                properties: {}
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
   /events:
     get:
       tags:
